@@ -1,5 +1,12 @@
-What's new
-===========
+## 2025-10-18
+1 - Misc bug fixes  
++ Fit parsing fixes. Based on fit files generated by Canmore Gporter GP102, the program required all fit file messages to have exactly the same fields and to have Lat/Lon entries. This is no more the case and the program should handle suunto (maybe garmin, coros, polar) **.fit* files correcly. Missing fields are linearly interpolated to avoid scipy dependancy.
+
++ updated to latest matplolib API (```tickparams['right/left'] -> tickparams['top/bottom']```)
++ updated to wxpython API (```deprecated panel.resize()```)
+
+
+## 2023-12-18 Initial release for WxGPX2
 Rewrote many things from scrath much cleaner code, etc
 
 1 - Internals & Track storage
@@ -25,5 +32,5 @@ It should be noted that the gpx specification does not make time tag mandatory
 + all plugins were rewritten to work on pandas dataframe
 + speedmeter plugin has been rewritten using matplotlib framework (now named gauge)
 
-2 - Scripts:
+6 - Scripts:
 + rewrote most scripts. deprecated the remaining ones.
